# repro_crash_import_error

./: Cargo.toml  README.md
js/: error.js
src/: no-repro-without-imports.rs  repro.rs
